--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.11"
+    "lodash": "^4.17.20",
+    "mongoose": "^5.11.11",
+    "node-fetch": "^2.6.1"
   }
 }
