--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -19,3 +19,15 @@ jobs:
       
       - name: 'Run tests'
         run: npm run test
+        
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: 'Install dependencies'
+        run: npm i
+      
+      - name: 'Linting'
+        run: npm run lint
