--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
+    "lint": "eslint src",
     "start": "node src/index.js",
     "prettify": "prettier --write src"
   },
@@ -21,7 +22,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-jest": "^24.1.3",
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
@@ -33,6 +35,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "eslint": "^7.18.0",
     "jest": "^26.6.3",
     "mockingoose": "^2.13.2"
   }
