added .env to tests, removed magic strings, user movie limit is now in .env

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Netguru recruitment task",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --setupFiles dotenv/config",
     "lint": "eslint src",
     "start": "node src/index.js",
     "prettify": "prettier --write src"
