--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - env: { BASIC_USER_MOVIE_LIMIT: 5 }
+
       - name: 'Install dependencies'
         run: npm i
       
