--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
      - 5000:5000
     volumes: 
      - ./src:/usr/src/app/src
+     - ./logs:/usr/src/app/logs
     depends_on:
      - db
     networks:
