--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.11",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
     "swagger-ui-express": "^4.1.6",
