--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
     "yamljs": "^0.3.0"
@@ -40,6 +39,7 @@
   "devDependencies": {
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
-    "mockingoose": "^2.13.2"
+    "mockingoose": "^2.13.2",
+    "prettier": "^2.2.1"
   }
 }
